--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <section id="question" class="question">
       <div class="question-inner01">
         <header class="question-head c-head01">
-          <h2 class="question-head__jp c-head01__jp is-line2"><span>こんな<span
-                class="dots">お悩み</span></span><span>ありませんか？</span></h2>
+          <h2 class="question-head__jp c-head01__jp is-line2"><span>こんな<span  class="dots">お悩み</span></span><span>ありませんか？</span></h2>
         </header>
         <div class="common-inner">
           <div class="sec02-item-02" id="sec02">
@@ -73,15 +72,9 @@
       data-block-level-container="ClassicSection">
       <div data-mesh-id="comp-lgvjvu2k4inlineContent" data-testid="inline-content" class="">
         <div data-mesh-id="comp-lgvjvu2k4inlineContent-gridContainer" data-testid="mesh-container-content">
-          <div id="comp-lgvjvu2m" class="HcOXKn c9GqVL QxJLC3 lq2cno comp-lgvjvu2m wixui-rich-text"
-            data-testid="richTextElement">
+          <div id="comp-lgvjvu2m" class="HcOXKn c9GqVL QxJLC3 lq2cno comp-lgvjvu2m wixui-rich-text"  data-testid="richTextElement">
             <p class="why-head__en c-head01__en">STRENGTHS</p>
-            <h4 class="width" style="font-size:26px; text-align:center;"><span style="font-size:26px;"
-                class="wixui-rich-text__text"><span style="letter-spacing:0.1em;" class="wixui-rich-text__text"><span
-                    class="color_43 wixui-rich-text__text"><span
-                      style="font-family:ｍｓ ｐゴシック,ms pgothic,ヒラギノ角ゴ pro w3,hiragino kaku gothic pro,osaka,sans-serif;"
-                      class="wixui-rich-text__text"><span style="font-weight:bold;"
-                        class="wixui-rich-text__text">アドゲートスクールの強み</span></span></span></span></span></h4>
+            <h4 class="width" style="font-size:26px; text-align:center;"><span style="font-size:26px;"  class="wixui-rich-text__text"><span style="letter-spacing:0.1em;" class="wixui-rich-text__text"><span  class="color_43 wixui-rich-text__text"><span  style="font-family:ｍｓ ｐゴシック,ms pgothic,ヒラギノ角ゴ pro w3,hiragino kaku gothic pro,osaka,sans-serif;"  class="wixui-rich-text__text"><span style="font-weight:bold;"  class="wixui-rich-text__text">アドゲートスクールの強み</span></span></span></span></span></h4>
           </div>
           <div id="comp-lgvjvu2m5" class="comp-lgvjvu2m5 aVng1S wixui-horizontal-line"></div>
           <div id="comp-lgvjvu2n3" class="KaEeLN comp-lgvjvu2n3">
@@ -427,7 +420,7 @@
       <figure class="wp-block-image aligncenter size-large is-resized">
         <img decoding="async" width="890" height="718" src="img/step.webp" alt="" class="wp-image-53"
           style="width:890px;height:auto"
-          srcset="img/step.webp 1024w, img/step.webp 300w, img/steo.webp 768w, img/step.webp 1468w"
+          srcset="img/step.webp 1024w, img/step.webp 300w, img/step.webp 768w, img/step.webp 1468w"
           sizes="(max-width: 1024px) 100vw, 1024px">
       </figure>
     </section>
@@ -548,7 +541,7 @@
           </div>
         </div>
       </section>
-      <div class="font_wrapper">
+      <div class="last_wrapper">
         <p>こんにちは、アドゲート代表の安部です。<br>
           <br>
           私は2020年にフリーランスの広告運用者として独立してから3年が経ちました。(2024.11月時点)<br>
@@ -614,5 +607,4 @@
     </div>
     <!-- /footer -->
 </body>
-
 </html>
